Minor claim name change